Update CSS to make header fit and avoid clipping

--- a/rhodes-app/public/css/kitchensink.css
+++ b/rhodes-app/public/css/kitchensink.css
@@ -1,3 +1,9 @@
+.ui-header .ui-title {
+    text-overflow: clip;
+    white-space: normal;
+    font-size: 14px;
+}
+
 .example_description {
 	display: none;
 }
